css/style.css
/* ... */
.go-top:hover {
    background: #66ccff/*#00de0b*/;
    color: #ffffff;
}

/*--------------------------------------- Home Page Styles -----------------------------------------*/ 

/*---------------------------------------
    Home Hero Section              
-----------------------------------------*/
#intro {
    background: url('../images/intro.jpg') 50% 0 repeat-y fixed;
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
    color: #ffffff;
    display: -webkit-box;
    display: -webkit-flex;
     display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
     -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
    height: 100vh;
    text-align: center;
}

#intro .btn-default {
	margin-right: 12px;
}

#intro .btn-default:hover {
	background: #ffffff;
	color: #333333;
	border-color: transparent;
}

#intro h3 {
  letter-spacing: 2px;
}

/*---------------------------------------
   Overview  section              
-----------------------------------------*/
#overview {
	padding-top: 10rem;
  padding-bottom: 10rem;
}

/*---------------------------------------
    Products Section              
-----------------------------------------*/
#products {
    background: #222;
    color: #ffffff;
    padding-top: 5rem;
    padding-bottom: 5rem;
}

@media (max-width: 992px) {
  .product {
    margin-bottom: 45px;
  }
}

#icon {
  color: #66ccff;
	font-size: 48px;
}

/*---------------------------------------
   Partners Section              
-----------------------------------------*/
#partners {
	padding-top: 5rem;
	padding-bottom: 5rem;
	color: #111;
}

#partners img {
  margin-top: 18px;
}

#partners h3 {
	margin-bottom: 5rem;
}

#iconPa {
	font-size: 48px;
}

/*---------------------------------------------
		About Partners Section
---------------------------------------------*/
#about {
	background: url('../images/contact-bg.jpg') 50% 0 repeat-y fixed;
	background-size: cover;
	background-position: center center;
	color: #101010;
	padding-top: 5rem;
	padding-bottom: 5rem;
}

#about h1 {
	text-align: center;
}

#about h3 {
	text-align: center;
}

#about .btn-danger {
    background: #101010;
    border-color: transparent;
}

#about .btn-danger:hover {
  background: #66ccff;
  border-color: transparent;
  color: #101010;
}

@media (max-width: 992px) {
  .ptnrBox {
    margin-bottom: 45px;
  }
}

.ptnrBox {
  border-radius: 5px;
  padding: 60px 30px;
  text-align: center;
	background: rgba(161, 161, 161, 0.42);
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}

.ptnrBox img {
  z-index: 10;
  position: relative;
  max-width: 100%;
  margin-bottom: 40px;
}

.ptnrBox h4 {
  margin-top: 0px;
  font-size: 22px;
  color: #1e1e1e;
  margin-bottom: 25px;
}

.ptnrBox .btn-danger {
  margin-top: 35px;
  display: inline-block;	
}

/* -------------------------------------- Pulse Page Styles -------------------------------------- */
/*---------------------------------------
    Pulse Hero Section              
-----------------------------------------*/
#pulsHero {
    background: url('../../images/pulsHero.jpg') 50% 0 repeat-y fixed;
    -webkit-background-size: cover;
    background-size: cover;
    background-position: center center;
    color: #ffffff;
    display: -webkit-box;
    display: -webkit-flex;
     display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
     -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
    height: 100vh;
    text-align: right;
}

#pulsHero {
	color: #ffffff;
}

#pulsHero h2 {
	color: #66ccff
}

/*---------------------------------------
   Pulse Features Section              
-----------------------------------------*/
#plsFtrs {
	padding-top: 5rem;
  padding-bottom: 5rem;
}

#plsFtrs h1 { 
	text-align: center;
}

#plsFtrs h3 { 
	color: #04378a;
}

#plsFtrs li {
	font-size: 18px;
	line-height: 36px;
}

.fa-li {
	color: #04378a;
}

#zpat {
	padding-top: 10rem
	padding-bottom: 10rem;
}

#plsFtrs img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	max-height: 400px;
	max-width: 600px;
}

/*---------------------------------------
   Pulse Perks Section              
-----------------------------------------*/
/* bluemetal color: #82959e */

#plsPerks {
	color: #66ccff;
	background: #101010;
	text-align: center;
	padding-top: 5rem;
	padding-bottom: 5rem;
}

#plsPerks .section-title {
	color: #ffffff;	
}

#plsPerks h5 {
	color: #ffffff;	
}

.row-break {
	padding-top: 5rem;
}

#iconPrk {
	font-size: 38px;
}

/*---------------------------------------------
		Testimonials Section
---------------------------------------------*/

#testimonials {
  /*padding: 100px 0px;*/
  position: relative;
  z-index: 9;
	color: #101010;
	padding-top: 5rem;
  padding-bottom: 5rem;
}

#testimonials h1 {
	text-align: center;
}

@media (max-width: 992px) {
  .quoteBox {
    margin-bottom: 45px;
  }
}

.quoteBox {
  border-radius: 5px;
  padding: 60px 30px;
  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
}

.quoteBox img {
  z-index: 10;
  position: relative;
  max-width: 100%;
  margin-bottom: 40px;
}

.quoteBox h4 {
  margin-top: 0px;
  font-size: 22px;
  color: #ffffff;
  margin-bottom: 25px;
}

/* -------------------------------------- About Us Page Styles -------------------------------------- */

#story h1,
#vision h1 { 
	text-align: center;
}

#story p,
#vision p,
#founders p { 
	font-size: 18px;
	color: #101010;
	line-height: 27px;
	padding-bottom: 10px;
}

/* --------------------------------------
	Story Section
-------------------------------------- */
#story{
	background: url('../images/teambreak.jpg') 50% 0 repeat-y fixed;
	background-position: center center;'
	padding-top: 10rem;
	padding-bottom: 5rem;
}

#story .colBlock {
	background: #ffffff/*rgba(161, 161, 161, 0.42)*/;
}

.storyHead {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.side-title {
	writing-mode: vertical-rl;
	text-orientation: mixed;
}
/* ... */

